back-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: back-route
spec:
  to:
    kind: Service
    name: back-service
  port:
    targetPort: 5000
  tls:
    termination: edge
